dnl AUTOCONF configuration for dirkey
dnl Copyright (C) 2003-2009 Sam Steingold <sds@gnu.org>
dnl GNU GPL2

AC_PREREQ(2.57)
AC_INIT(dirkey, 1.0, clisp-list)
AC_CONFIG_SRCDIR(dirkey1.lisp)
AC_CONFIG_HEADERS(config.h)

RSE_BOLD
BOLD_MSG([Dirkey (Common)])
CL_MODULE_COMMON_CHECKS()

BOLD_MSG([Dirkey (Headers)])
AC_CHECK_HEADERS([lber.h ldap.h gnome.h],,,
dnl Solaris/cc requires <lber.h> to be included before <ldap.h>
[#if HAVE_LBER_H
# include <lber.h>
#endif
])

BOLD_MSG([Dirkey (Output)])
AC_CONFIG_FILES([Makefile link.sh])
AC_OUTPUT

BOLD_MSG([Dirkey (Done)])
