dnl AUTOCONF configuration for the CLISP gtk2 module
dnl Sam Steingold 2006-2010

AC_PREREQ(2.57)
AC_INIT(gtk2, 1.0, clisp-list)
AC_CONFIG_SRCDIR(gtk.lisp)
AC_CONFIG_HEADERS(config.h)

RSE_BOLD
BOLD_MSG([GTK2 (Common)])
CL_MODULE_COMMON_CHECKS([ffi])

AM_PATH_GTK_2_0(,,[AC_MSG_ERROR([cannot find GTK2])],)
PKG_CHECK_MODULES([LIBGLADE],[libglade-2.0],,
[AC_MSG_ERROR([cannot find LIBGLADE])])
AC_SUBST(LIBGLADE_CFLAGS)
AC_SUBST(LIBGLADE_LIBS)

BOLD_MSG([GTK2 (Output)])
AC_CONFIG_FILES(Makefile link.sh)
AC_OUTPUT

BOLD_MSG([GTK2 (Done)])
