dnl AUTOCONF configuration for I18N
dnl Sam Steingold 2004

AC_PREREQ(2.57)
AC_INIT(i18n, 1.0, clisp-list)
AC_CONFIG_SRCDIR(i18n.lisp)
AC_CONFIG_HEADERS(config.h)

AC_MSG_NOTICE([ * I18N (locale):])
AC_CHECK_HEADERS(locale.h langinfo.h)
AC_CHECK_FUNCS(setlocale nl_langinfo)

AC_MSG_NOTICE([ * I18N (Output)])
AC_CONFIG_FILES(Makefile link.sh)
AC_OUTPUT

AC_MSG_NOTICE([ * I18N (Done)])
