dnl AUTOCONF configuration for readline
dnl Sam Steingold 2005

AC_PREREQ(2.57)
AC_INIT(readline, 1.0, clisp-list)
AC_CONFIG_SRCDIR(readline.lisp)
AC_CONFIG_HEADERS(config.h)

AC_MSG_NOTICE([ * READLINE (Tools)])
AC_PROG_CC
AC_PROG_CPP

AC_MSG_NOTICE([ * READLINE (Headers & Functions)])
CL_READLINE

AC_MSG_NOTICE([ * READLINE (Output)])
AC_CONFIG_FILES(Makefile link.sh)
AC_OUTPUT

AC_MSG_NOTICE([ * READLINE (Done)])
