dnl AUTOCONF configuration for wildcard
dnl Bruno Haible 12.4.1997
dnl Sam Steingold 2003-07-28, 2006-2009

AC_PREREQ(2.57)
AC_INIT(wildcard, 1.0, clisp-list)
AC_CONFIG_SRCDIR(wildcard.lisp)
AC_CONFIG_HEADERS(config.h)

RSE_BOLD
BOLD_MSG([Wildcard (Common)])
if test $cl_cv_have_ffcall = no; then
  AC_MSG_ERROR([module Wildcard requires FFI])
fi
CL_MODULE_COMMON_CHECKS(../../src/build-aux)
AM_INIT_AUTOMAKE
wc_gl_EARLY
wc_gl_INIT

dnl called from top-level configure.in:gl_INIT [gl_FUNC_FNMATCH_POSIX]
dnl $ac_cv_func_fnmatch_gnu comes from ../config.cache
dnl if test $gl_cv_func_fnmatch_gnu != yes; then
dnl   FNMATCH_O=fnmatch.o
dnl else
dnl   FNMATCH_O=
dnl fi
dnl AC_SUBST(FNMATCH_O)
BOLD_MSG([Wildcard (Output)])
AC_CONFIG_FILES([Makefile link.sh gllib/Makefile])
AC_OUTPUT

BOLD_MSG([Wildcard (Done)])
